css/main.css
/* ... */
/*credit-offers*/


.credit-offers{
    vertical-align: bottom;
}

.credit-offers>div{
    border: 1px solid #AEAEAE;
    padding: 7px 0;
    text-align: center;
    /*font-size:0.7em;*/
    margin-top:6px;

    cursor: pointer;
}

.credit-offers>div.selected{
    background: #FFF2BF;
    /*padding: 10px 0;
    font-size:1em;
    margin-top:0; */
}

.credit-offers>div h4{
    max-height: 1.7em;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.credit-offers .arrow-prev, .credit-offers .arrow-next,
.car-list .arrow-prev, .car-list .arrow-next{
    width:10px;
    height:30px;
    left:auto;
    bottom:auto;
    top:50%;
    margin:0;
    margin-top:-15px;
}

.credit-offers .arrow-prev,
.car-list .arrow-prev{
    left:-15px;
    background-position: -10px 0;
}

.credit-offers .arrow-next,
.car-list .arrow-next{
    right:-15px;
    background-position: -10px -30px;

}


.client-options a {
    display: inline-block;
    /*position: relative;
    top: 1.2em;*/
}
/*
.client-options {
    text-align: justify;

    height:50px;
    margin-top:-70px;
    margin-bottom: 20px;
}



.client-options:before {
    content: '';
    display: block;
    width: 100%;
    margin-bottom: -1.2em;
}

.client-options:after {
    content: '';
    display: inline-block;
    width: 100%;
}     */

.toggler {
    background: url("../img/toggler.png") no-repeat;
    width: 7px;
    height: 10px;
    display: block;
    position: absolute;
    top: 2px;
    right: -10px;

}

/*services-choose*/
.services-choose {
    position: relative;

}


.services-choose table {
    margin: 10px -20px;
}



.services-choose .show-month-price{
    position:absolute;
    right:0;
    top:13px;
    padding-right:20px;
}

.services-choose table{
    width:760px;
    margin-bottom:0.5em;

}

.services-choose table td, .services-choose table th{
    line-height: 1.4em;
    white-space: nowrap;
}

.services-choose table th{
    text-align: left;
    color:#aaa;
    font-weight: normal;
}
.services-choose table th.text-right{
    text-align: right;
}

.services-choose table td:last-child, .services-choose table  th:last-child{
    text-align: right;
}
.services-choose table td{
    padding-bottom:0.5em;
}

.services-choose table td.sale{
    color: #3aab00;
    font-style: italic;
}


.services-choose table td select{
    width:100%;
    margin:0;
}

.services-choose table td input{
    width:55px;
    margin:0;
    text-align: right;
}


.services-choose table td:nth-child(1){width:30%;}
.services-choose table td:nth-child(2){width:25%;padding-right:1em}
.services-choose table td:nth-child(3){width:10%;min-width: 90px;}
.services-choose table td:nth-child(4){width:15%;min-width: 110px;}
.services-choose table td:nth-child(5){width:20%;min-width: 115px;}



.services-choose table tr:last-child{
    font-style: italic;
}




.services-choose table tr>*:first-child{padding-left:20px;}
.services-choose table tr>*:last-child{padding-right:20px;}


.services-choose table tr.service{
    background: #FFF2BF;
}


.services-choose table tr:nth-child(2) td{
    padding-top:0.5em;
}

.services-choose table tr:first-child, .services-choose table tr:last-child{
    border: 1px solid #AEAEAE;
    border-width: 0 0 1px 0;
}


.services-choose table tr:last-child{
    border-width: 1px 0 0 0;
}


/**/

.service-list div ul{
    list-style: none;
    padding:0;
    margin:0 0 1.3em 0;
}

.service-list div ul li{
    position: relative;
    line-height:1.8;
}

.service-list div ul li.header{
    font-size:18px;

}

.service-list div ul li.header a{
    vertical-align: baseline;
    margin-left:5px;
}

.service-list div ul li .price{
    right:0;
    top:0;
    position: absolute;
    display:block;
    text-align:right;
}


.service-list>div:nth-child(2n){
    padding-left:2em;
}

.service-list>div:nth-child(2n+1){
    margin-left:0;
    padding-right:2em;
}

/*end-offer*/
.end-offer h2 {
    font-size: 28px;
    padding-bottom: 10px;
    text-align: center;
}

.end-offer table {
    width: 50%;
    margin: 0 auto;
    font-size: 12px;

}

.end-offer table tr td {
    padding-left: 3px;
    padding-right: 3px;
}

.end-offer table tr {
    font-style: italic;

}

.end-offer table tr td:nth-child(2) {
    text-align: right;

}

.end-offer table tr.header {
    font-size: 130%;
    font-style: normal;
}

.end-offer table tr.collapsible td {
    padding-top: 1.33em;
    cursor: pointer;

}


.end-offer tr.collapsible td:first-child:before{
    content: "►";
    width:20px;
    margin-left:-20px;
    float:left;
    display:block;


}

.end-offer tr.expanded td:first-child:before{
    content: "▼";
}

.end-offer tr td:nth-child(2){width:70px;}
.end-offer tr td:nth-child(3){width:46px;}



.modal .input{
    position:relative;
    font-size:20px;
}

.modal .input, .modal .input label{
    font-size:18px;
    line-height: 35px;
}


.modal .input label{
    position: absolute;

    top:0;
}

.modal{
    width:400px;
    margin-left:-200px;
    padding:30px;
}

.modal .input input, .modal .input span{
    margin-left:225px;
    text-align: right;
    display:block;
    width:100px

}

.modal .input label:last-child{
    right:0;

}


.modal .input input{


}





.offers-comparison-container{
    width:100%;
    overflow-x: scroll;

}

.offers-comparison{
    /*width:100%;*/
}


.offers-comparison th, .offers-comparison td{
    vertical-align:top;
}

.offers-comparison th{
    text-align:left;
    font-weight:normal;
    font-size:0.8em;



}
.offers-comparison tr.group,
.offers-comparison tr.group th,
.offers-comparison tr.group td{
    background:#fff;

}

.offers-comparison tr.group th{
    font-weight:bold;

}

.offers-comparison tr.group td{
    text-align:left;
}


.offers-comparison th, .offers-comparison td{
    width:170px !important;
    min-width:170px !important;
    border-bottom:1px solid #ccc;
    padding:3px 5px;
    background:rgba(255,255,255,0.7);
    /*white-space: nowrap;*/
}
/* ... */

